[gd_scene load_steps=3 format=3 uid="uid://ck3cs6fa37s45"]

[ext_resource type="Script" path="res://Source/Menus/main_menu.gd" id="1_3oxnt"]
[ext_resource type="FontFile" uid="uid://bqwipp1vl7qqn" path="res://Source/Resources/black-mud.regular.ttf" id="2_cw1h7"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_3oxnt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 901.0
offset_bottom = 568.0

[node name="Control" type="Control" parent="Control"]
anchors_preset = 0
offset_left = -7.0
offset_top = -44.0
offset_right = 33.0
offset_bottom = -4.0

[node name="LabelShadow" type="RichTextLabel" parent="Control/Control"]
modulate = Color(0, 0, 0, 0.74902)
layout_mode = 0
offset_left = 338.0
offset_top = 87.0
offset_right = 795.0
offset_bottom = 245.0
theme_override_fonts/normal_font = ExtResource("2_cw1h7")
theme_override_font_sizes/normal_font_size = 66
text = "Burnout Blitz"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Label" type="RichTextLabel" parent="Control/Control"]
modulate = Color(0.996078, 0.0235294, 0.254902, 1)
layout_mode = 0
offset_left = 333.0
offset_top = 83.0
offset_right = 790.0
offset_bottom = 241.0
theme_override_fonts/normal_font = ExtResource("2_cw1h7")
theme_override_font_sizes/normal_font_size = 66
text = "Burnout Blitz"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Versus" type="Button" parent="Control"]
layout_mode = 0
offset_left = 469.0
offset_top = 205.0
offset_right = 654.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(0.965998, 0, 0.337831, 1)
theme_override_fonts/font = ExtResource("2_cw1h7")
theme_override_font_sizes/font_size = 31
text = "Versus"

[node name="TimeTrials" type="Button" parent="Control"]
layout_mode = 0
offset_left = 469.0
offset_top = 299.0
offset_right = 653.0
offset_bottom = 382.0
theme_override_colors/font_color = Color(0.616435, 0.794752, 0.908539, 1)
theme_override_fonts/font = ExtResource("2_cw1h7")
theme_override_font_sizes/font_size = 31
text = "Time Trials"

[node name="Tutorial" type="Button" parent="Control"]
layout_mode = 0
offset_left = 471.0
offset_top = 390.0
offset_right = 655.0
offset_bottom = 473.0
theme_override_colors/font_color = Color(0.995323, 0.459782, 0.253771, 1)
theme_override_fonts/font = ExtResource("2_cw1h7")
theme_override_font_sizes/font_size = 31
text = "Tutorial"

[node name="Credits" type="Button" parent="Control"]
layout_mode = 0
offset_left = 471.0
offset_top = 482.0
offset_right = 655.0
offset_bottom = 565.0
theme_override_fonts/font = ExtResource("2_cw1h7")
theme_override_font_sizes/font_size = 31
text = "Credits"

[connection signal="pressed" from="Control/Versus" to="." method="_on_versus_pressed"]
[connection signal="pressed" from="Control/TimeTrials" to="." method="_on_time_trials_pressed"]
